feat(web): add Codex connected accounts UI with device code flow

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -90,7 +90,30 @@
     "failedToDeleteKey": "Failed to delete {{provider}} key",
     "failedToUploadAvatar": "Failed to upload avatar",
     "failedToUpdateUser": "Failed to update user information",
-    "failedToResetPreferences": "Failed to reset preferences"
+    "failedToResetPreferences": "Failed to reset preferences",
+    "connectedAccounts": "Connected Accounts",
+    "connectedAccountsDesc": "Connect external accounts to use models through your existing subscriptions.",
+    "connect": "Connect",
+    "disconnect": "Disconnect",
+    "codexDesc": "Use Codex models with your ChatGPT subscription",
+    "codexConnectTitle": "Connect ChatGPT Account",
+    "codexHowItWorks": "How it works",
+    "codexStep1Title": "Sign in to OpenAI",
+    "codexStep1Desc": "A new tab will open to OpenAI's authorization page. Log in with your ChatGPT account.",
+    "codexStep2Title": "Enter the device code",
+    "codexStep2Desc": "A short code (e.g. ABCD-EFGH) will appear right here. Copy it and enter it on the OpenAI page to authorize access.",
+    "codexStep3Title": "Auto-connected",
+    "codexStep3Desc": "Once approved, we'll automatically detect it and connect your account. No copy-pasting needed.",
+    "codexSecurityTitle": "Security & Privacy",
+    "codexSecurityDesc": "Your OAuth tokens are encrypted at rest (AES-256 via pgp_sym_encrypt) and only decrypted when making API calls on your behalf. We never store your OpenAI password. Tokens can be revoked at any time by disconnecting.",
+    "codexDisclaimerDesc": "By proceeding, you acknowledge that you are connecting your ChatGPT subscription at your own discretion and responsibility.",
+    "codexProceed": "Proceed to Connect",
+    "codexWaitingApproval": "Waiting for approval...",
+    "codexEnterCode": "and enter this code:",
+    "codexVisit": "Visit",
+    "codexTimeout": "Authorization timed out. Please try again.",
+    "codexPollFailed": "Polling failed. Please try again.",
+    "codexFlowFailed": "Failed to start Codex device code flow"
   },
   "dashboard": {
     "title": "LangAlpha",
