--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -90,7 +90,30 @@
     "failedToDeleteKey": "删除 {{provider}} 密钥失败",
     "failedToUploadAvatar": "上传头像失败",
     "failedToUpdateUser": "更新用户信息失败",
-    "failedToResetPreferences": "重置偏好设置失败"
+    "failedToResetPreferences": "重置偏好设置失败",
+    "connectedAccounts": "已连接账户",
+    "connectedAccountsDesc": "连接外部账户以通过您的现有订阅使用模型。",
+    "connect": "连接",
+    "disconnect": "断开",
+    "codexDesc": "使用 ChatGPT 订阅来访问 Codex 模型",
+    "codexConnectTitle": "连接 ChatGPT 账户",
+    "codexHowItWorks": "操作步骤",
+    "codexStep1Title": "登录 OpenAI",
+    "codexStep1Desc": "将打开新标签页跳转到 OpenAI 授权页面，使用您的 ChatGPT 账户登录。",
+    "codexStep2Title": "输入设备码",
+    "codexStep2Desc": "一个短码（如 ABCD-EFGH）将显示在此页面上。复制该码并在 OpenAI 页面输入以授权访问。",
+    "codexStep3Title": "自动连接",
+    "codexStep3Desc": "授权通过后，我们会自动检测并连接您的账户，无需手动复制粘贴。",
+    "codexSecurityTitle": "安全与隐私",
+    "codexSecurityDesc": "您的 OAuth 令牌使用 AES-256 加密存储（pgp_sym_encrypt），仅在代您调用 API 时解密。我们绝不存储您的 OpenAI 密码。您可以随时断开连接以撤销令牌。",
+    "codexDisclaimerDesc": "继续操作即表示您确认自愿连接 ChatGPT 订阅，并自行承担相关责任。",
+    "codexProceed": "继续连接",
+    "codexWaitingApproval": "等待授权中...",
+    "codexEnterCode": "并输入此代码：",
+    "codexVisit": "访问",
+    "codexTimeout": "授权超时，请重试。",
+    "codexPollFailed": "轮询失败，请重试。",
+    "codexFlowFailed": "启动 Codex 设备码流程失败"
   },
   "dashboard": {
     "title": "LangAlpha",
