feat(web): add i18n for FilePanel and context menus with UI polish

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -215,6 +215,45 @@
     "skip": "Skip",
     "workspaceStarting": "Starting workspace..."
   },
+  "context": {
+    "addToContext": "Add to context",
+    "addLinesToContext": "Add L{{start}}-{{end}} to context",
+    "addLineToContext": "Add L{{line}} to context",
+    "addNLinesToContext": "Add {{count}} lines to context",
+    "openFile": "Open file",
+    "fromAgentResponse": "From agent response"
+  },
+  "filePanel": {
+    "editingHint": "Editing — changes are not saved until you press Save",
+    "discardUnsaved": "You have unsaved changes. Discard them?",
+    "discardChanges": "Discard unsaved changes?",
+    "confirmSave": "Save changes? This will overwrite the file in the sandbox and cannot be undone.",
+    "fileTooLarge": "File is too large to edit in the browser (>500KB)",
+    "loadEditFailed": "Failed to load file for editing",
+    "saveFailed": "Save failed",
+    "deleteFailed": "Delete failed",
+    "deletePartialFail": "{{count}} file(s) failed to delete",
+    "backToFileList": "Back to file list",
+    "backToAllFiles": "Back to all files",
+    "selectFiles": "Select files",
+    "uploadFile": "Upload file",
+    "backupFiles": "Backup files to database",
+    "refresh": "Refresh",
+    "deleteSelected": "Delete selected",
+    "cancelSelection": "Cancel selection",
+    "download": "Download",
+    "editFile": "Edit file",
+    "savePdf": "Save as PDF",
+    "closePrintSettings": "Close print settings",
+    "undo": "Undo (Cmd+Z)",
+    "redo": "Redo (Cmd+Shift+Z)",
+    "showDiff": "Show diff",
+    "hideDiff": "Hide diff",
+    "save": "Save (Cmd+S)",
+    "cancelEditing": "Cancel editing",
+    "close": "Close",
+    "sortFiles": "Sort files"
+  },
   "automation": {
     "automations": "Automations",
     "createAutomation": "Create Automation",
