--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -215,6 +215,45 @@
     "skip": "跳过",
     "workspaceStarting": "正在启动工作区..."
   },
+  "context": {
+    "addToContext": "添加到上下文",
+    "addLinesToContext": "添加 L{{start}}-{{end}} 到上下文",
+    "addLineToContext": "添加 L{{line}} 到上下文",
+    "addNLinesToContext": "添加 {{count}} 行到上下文",
+    "openFile": "打开文件",
+    "fromAgentResponse": "来自智能体回复"
+  },
+  "filePanel": {
+    "editingHint": "编辑中 — 更改在按下保存前不会生效",
+    "discardUnsaved": "您有未保存的更改，确定要丢弃吗？",
+    "discardChanges": "丢弃未保存的更改？",
+    "confirmSave": "保存更改？这将覆盖沙箱中的文件，且无法撤销。",
+    "fileTooLarge": "文件过大，无法在浏览器中编辑（>500KB）",
+    "loadEditFailed": "加载文件编辑失败",
+    "saveFailed": "保存失败",
+    "deleteFailed": "删除失败",
+    "deletePartialFail": "{{count}} 个文件删除失败",
+    "backToFileList": "返回文件列表",
+    "backToAllFiles": "返回全部文件",
+    "selectFiles": "选择文件",
+    "uploadFile": "上传文件",
+    "backupFiles": "备份文件到数据库",
+    "refresh": "刷新",
+    "deleteSelected": "删除所选",
+    "cancelSelection": "取消选择",
+    "download": "下载",
+    "editFile": "编辑文件",
+    "savePdf": "导出为 PDF",
+    "closePrintSettings": "关闭打印设置",
+    "undo": "撤销 (Cmd+Z)",
+    "redo": "重做 (Cmd+Shift+Z)",
+    "showDiff": "显示差异",
+    "hideDiff": "隐藏差异",
+    "save": "保存 (Cmd+S)",
+    "cancelEditing": "取消编辑",
+    "close": "关闭",
+    "sortFiles": "排序文件"
+  },
   "automation": {
     "automations": "自动化",
     "createAutomation": "创建自动化",
