--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -213,7 +213,12 @@
     "startQuestion": "开始提问",
     "letsGo": "开始",
     "skip": "跳过",
-    "workspaceStarting": "正在启动工作区..."
+    "workspaceStarting": "正在启动工作区...",
+    "placeholderDefault": "想了解什么？输入 @ 引用文件",
+    "placeholderPendingRejection": "说说希望怎么调整...",
+    "placeholderInterrupted": "输入新指令继续引导智能体...",
+    "placeholderLoading": "可以继续输入，消息会排队发送...",
+    "placeholderSubagentsRunning": "工作者仍在运行，可输入消息或点击工作者单独指令"
   },
   "context": {
     "addToContext": "添加到上下文",
