feat(web): add workspace pinning, custom sort, and drag-and-drop reorder

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -137,6 +137,11 @@
     "searchWorkspaces": "Search workspaces...",
     "sortBy": "Sort by",
     "activity": "Activity",
+    "custom": "Custom",
+    "reorder": "Reorder",
+    "dragToReorder": "Drag to reorder",
+    "pinToTop": "Pin to top",
+    "unpin": "Unpin",
     "noWorkspacesFound": "No workspaces found",
     "welcomeTitle": "Welcome to LangAlpha",
     "welcomeDesc": "Get started by setting up your preferences or creating a workspace.",
