--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -137,6 +137,11 @@
     "searchWorkspaces": "搜索工作区...",
     "sortBy": "排序",
     "activity": "活动时间",
+    "custom": "自定义",
+    "reorder": "排列",
+    "dragToReorder": "拖拽排序",
+    "pinToTop": "置顶",
+    "unpin": "取消置顶",
     "noWorkspacesFound": "未找到工作区",
     "welcomeTitle": "欢迎使用 LangAlpha",
     "welcomeDesc": "开始设置您的偏好或创建工作区。",
