feat(web): add i18n for skill slash command descriptions

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -235,7 +235,22 @@
       "summarizeName": "summarize",
       "summarizeDesc": "Compact conversation context to free up token space",
       "offloadDesc": "Offload large tool arguments to sandbox filesystem",
-      "noMatching": "No matching commands"
+      "noMatching": "No matching commands",
+      "comps-analysisDesc": "Comparable company analysis: operating metrics, valuation multiples, peer benchmarking",
+      "dcf-modelDesc": "DCF valuation: free cash flow projections, WACC, terminal value, sensitivity analysis",
+      "earnings-previewDesc": "Pre-earnings analysis: consensus estimates, key metrics to watch, bull/base/bear scenarios",
+      "idea-generationDesc": "Stock screening and idea generation: quantitative screens, thematic analysis, shortlist",
+      "check-modelDesc": "Financial model audit: structural checks, formula validation, integrity testing",
+      "morning-noteDesc": "Daily research briefing: overnight news, pre-market movers, earnings, macro events",
+      "catalyst-calendarDesc": "Event tracker: earnings dates, economic releases, conferences, regulatory events",
+      "check-deckDesc": "Investment deck QC: number consistency, data-narrative alignment, IB language, formatting audit",
+      "thesis-trackerDesc": "Investment thesis scorecard: track pillars, risks, catalysts, and conviction over time",
+      "model-updateDesc": "Update financial model with new quarterly actuals, revised estimates, and updated price target",
+      "3-statement-modelDesc": "Integrated 3-statement financial model: linked income statement, balance sheet, and cash flow",
+      "earnings-analysisDesc": "Post-earnings analysis report: beat/miss breakdown, estimate revisions, thesis impact, charts",
+      "sector-overviewDesc": "Industry landscape report: market size, competitive dynamics, company profiles, valuation context",
+      "competitive-analysisDesc": "Competitive landscape analysis: positioning, scorecards, moat assessment, market share trends",
+      "initiating-coverageDesc": "Full equity research initiation: company research, financial model, valuation, charts, 30-50 page report"
     },
     "summarizedNotification": "Context compacted · {{from}} messages → summary",
     "offloadedArgsNotification": "Tool arguments offloaded · {{count}} tools",
