--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -235,7 +235,22 @@
       "summarizeName": "summarize",
       "summarizeDesc": "压缩对话上下文以释放 token 空间",
       "offloadDesc": "将大型工具参数转存至沙箱文件系统",
-      "noMatching": "无匹配命令"
+      "noMatching": "无匹配命令",
+      "comps-analysisDesc": "可比公司分析：经营指标、估值倍数、同业对标",
+      "dcf-modelDesc": "DCF 估值：自由现金流预测、WACC、终值、敏感性分析",
+      "earnings-previewDesc": "盈利前瞻：一致预期、关键指标、牛/基/熊情景",
+      "idea-generationDesc": "选股与灵感：量化筛选、主题分析、候选名单",
+      "check-modelDesc": "财务模型审核：结构检查、公式验证、完整性测试",
+      "morning-noteDesc": "每日研究简报：隔夜要闻、盘前异动、财报、宏观事件",
+      "catalyst-calendarDesc": "事件追踪：财报日期、经济数据、会议、监管事件",
+      "check-deckDesc": "投资材料审核：数据一致性、叙述匹配、投行用语、格式审查",
+      "thesis-trackerDesc": "投资论题记分卡：跟踪核心逻辑、风险、催化剂和信念变化",
+      "model-updateDesc": "更新财务模型：录入季度实际数据、修正预估、更新目标价",
+      "3-statement-modelDesc": "联动三表财务模型：利润表、资产负债表和现金流量表",
+      "earnings-analysisDesc": "盈利分析报告：超预期/不及预期分解、预估修正、论题影响、图表",
+      "sector-overviewDesc": "行业全景报告：市场规模、竞争格局、公司概览、估值背景",
+      "competitive-analysisDesc": "竞争格局分析：市场定位、评分卡、护城河评估、份额趋势",
+      "initiating-coverageDesc": "全面研究启动：公司研究、财务模型、估值、图表、30-50 页报告"
     },
     "summarizedNotification": "上下文已压缩 · {{from}} 条消息 → 摘要",
     "offloadedArgsNotification": "工具参数已转存 · {{count}} 个工具",
