feat(web): i18n and tool display improvements for charts, activities, and detail panel

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -339,5 +339,220 @@
     "statusUnknown": "Unknown",
     "namePlaceholder": "e.g. Daily market summary",
     "descPlaceholder": "Optional description"
+  },
+  "toolArtifact": {
+    "open": "Open",
+    "prevClose": "Prev Close",
+    "dayRange": "Day Range",
+    "52wRange": "52W Range",
+    "volume": "Volume",
+    "marketCap": "Market Cap",
+    "periodHigh": "Period High",
+    "periodLow": "Period Low",
+    "high": "H",
+    "low": "L",
+    "vol": "Vol",
+    "marketIndices": "Market Indices",
+    "sectorPerformance": "Sector Performance",
+    "stockScreener": "Stock Screener",
+    "pricePerformance": "Price Performance",
+    "analystRatings": "Analyst Ratings",
+    "revenueBreakdown": "Revenue Breakdown",
+    "byProduct": "By Product",
+    "byGeography": "By Geography",
+    "quarterlyRevenue": "Quarterly Revenue & Net Income",
+    "profitMargins": "Profit Margins",
+    "epsActualVsEstimate": "EPS: Actual vs Estimate",
+    "cashFlowQuarterly": "Cash Flow (Quarterly)",
+    "openInTrading": "Open in Trading ↗",
+    "revenue": "Revenue",
+    "netIncome": "Net Income",
+    "grossMargin": "Gross Margin",
+    "operatingMargin": "Operating Margin",
+    "netMargin": "Net Margin",
+    "epsActual": "EPS Actual",
+    "epsEstimate": "EPS Estimate",
+    "operatingCF": "Operating CF",
+    "capEx": "CapEx",
+    "freeCF": "Free CF",
+    "periodChange": "Period Change",
+    "avgVolume": "Avg Volume",
+    "volatility": "Volatility",
+    "nResults": "{{count}} result",
+    "nResults_other": "{{count}} results",
+    "nRatings": "{{count}} ratings",
+    "nMoreStocks": "+{{count}} more stock",
+    "nMoreStocks_other": "+{{count}} more stocks",
+    "noPriceData": "No price data available",
+    "noSectorData": "No sector data available",
+    "noIndexData": "No index data available",
+    "noScreenerResults": "No screener results available",
+    "symbol": "Symbol",
+    "company": "Company",
+    "price": "Price",
+    "mktCap": "Mkt Cap",
+    "sector": "Sector",
+    "industry": "Industry",
+    "beta": "Beta",
+    "dividend": "Dividend",
+    "exchange": "Exchange",
+    "country": "Country",
+    "changePct": "Change%",
+    "filing": "{{type}} Filing",
+    "filingDate": "Filing Date",
+    "periodEnd": "Period End",
+    "cik": "CIK",
+    "sections": "Sections",
+    "sectionsExtracted": "Sections Extracted",
+    "earningsCall": "Earnings Call",
+    "included": "Included",
+    "recent8Ks": "Recent 8-Ks",
+    "recent8KFilings": "Recent 8-K Filings",
+    "viewOnEdgar": "View on SEC EDGAR ↗",
+    "openOnEdgar": "Open on SEC EDGAR",
+    "8kFilings": "8-K Filings",
+    "nFilings": "{{count}} filing in the last {{days}} days",
+    "nFilings_other": "{{count}} filings in the last {{days}} days",
+    "nMoreFilings": "+{{count}} more filing",
+    "nMoreFilings_other": "+{{count}} more filings",
+    "nMoreAutomations": "+{{count}} more automation",
+    "nMoreAutomations_other": "+{{count}} more automations",
+    "pressRelease": "Press Release",
+    "view": "View",
+    "secFilingDocument": "SEC Filing Document",
+    "loadingSecDocument": "Loading SEC document...",
+    "no8KFilings": "No 8-K filings found in the last {{days}} days.",
+    "nLast90Days": "{{count}} (last 90 days)",
+    "automations": "Automations",
+    "automationCreated": "Automation Created",
+    "automationCreatedSuccess": "Automation Created Successfully",
+    "schedule": "Schedule",
+    "nextRun": "Next Run",
+    "lastRun": "Last Run",
+    "executions": "Executions",
+    "nTotal": "{{count}} total",
+    "nAutomations": "{{count}} automation",
+    "nAutomations_other": "{{count}} automations",
+    "next": "Next: {{time}}",
+    "instruction": "Instruction",
+    "configuration": "Configuration",
+    "agentMode": "Agent Mode",
+    "triggerType": "Trigger Type",
+    "recurringCron": "Recurring (cron)",
+    "oneTime": "One-time",
+    "recurring": "Recurring",
+    "executionHistory": "Execution History ({{count}} total)",
+    "manualTrigger": "Manual trigger",
+    "noAutomationsFound": "No automations found.",
+    "viewInAutomations": "View in Automations",
+    "status": "Status",
+    "planDetails": "Plan Details",
+    "noPlanDescription": "No plan description.",
+    "subagentTask": "Subagent Task",
+    "instructions": "Instructions",
+    "result": "Result",
+    "subagentStillRunning": "Subagent is still running...",
+    "noResultAvailable": "No result available",
+    "goToSubagentTab": "Go to subagent tab",
+    "noResultContent": "No result content",
+    "input": "Input",
+    "output": "Output",
+    "resultTooLarge": "Result too large to display inline",
+    "resultSavedToFilesystem": "The full result has been saved to the workspace filesystem.",
+    "openFullResult": "Open full result",
+    "preview": "Preview",
+    "nSearchResults": "{{count}} result for \"{{query}}\"",
+    "nSearchResults_other": "{{count}} results for \"{{query}}\"",
+    "untitled": "Untitled",
+    "nReasoning": "{{count}} reasoning",
+    "nToolCalls": "{{count}} tool call",
+    "nToolCalls_other": "{{count}} tool calls",
+    "nStepsCompleted": "{{count}} step completed",
+    "nStepsCompleted_other": "{{count}} steps completed",
+    "reasoning": "Reasoning",
+    "reasoningLabel": "Reasoning: {{title}}",
+    "reasoningPending": "Reasoning...",
+    "reasoningComplete": "Reasoning complete",
+    "done": "done",
+    "toolCall": "Tool Call",
+    "tool": {
+      "stockPrices": "Stock Prices",
+      "companyOverview": "Company Overview",
+      "marketIndices": "Market Indices",
+      "sectorPerformance": "Sector Performance",
+      "stockScreener": "Stock Screener",
+      "secFiling": "SEC Filing",
+      "entityNews": "Entity News",
+      "tickerSearch": "Ticker Search",
+      "financialStatements": "Financial Statements",
+      "financialRatios": "Financial Ratios",
+      "growthMetrics": "Growth Metrics",
+      "valuationHistory": "Valuation History",
+      "stockData": "Stock Data",
+      "assetData": "Asset Data",
+      "userData": "User Data",
+      "updateData": "Update Data",
+      "removeData": "Remove Data",
+      "bash": "Bash",
+      "glob": "Glob",
+      "grep": "Grep",
+      "webSearch": "Web Search",
+      "webFetch": "Web Fetch",
+      "write": "Write",
+      "read": "Read",
+      "edit": "Edit",
+      "executeCode": "Execute Code",
+      "thinking": "Thinking",
+      "waitingForSubagent": "Waiting for Subagent",
+      "taskOutput": "Task Output",
+      "automations": "Automations",
+      "createAutomation": "Create Automation",
+      "manageAutomation": "Manage Automation"
+    },
+    "inProgress": {
+      "fetchingSymbolPrices": "fetching {{symbol}} prices...",
+      "fetchingPrices": "fetching prices...",
+      "analyzingSymbol": "analyzing {{symbol}}...",
+      "analyzing": "analyzing...",
+      "fetchingMarketIndices": "fetching market indices...",
+      "fetchingSectorData": "fetching sector data...",
+      "screeningStocks": "screening stocks...",
+      "fetchingSymbolFiling": "fetching {{symbol}} filing...",
+      "fetchingFiling": "fetching filing...",
+      "searchingPattern": "searching '{{pattern}}'...",
+      "searching": "searching...",
+      "searchingForPattern": "searching for '{{pattern}}'...",
+      "searchingQuery": "searching '{{query}}'...",
+      "fetchingDomain": "fetching {{domain}}...",
+      "fetching": "fetching...",
+      "writingFile": "writing {{name}}...",
+      "writing": "writing...",
+      "readingFile": "reading {{name}}...",
+      "reading": "reading...",
+      "editingFile": "editing {{name}}...",
+      "editing": "editing...",
+      "runningCommand": "running command...",
+      "executing": "executing...",
+      "waitingForSubagent": "waiting for subagent...",
+      "fetchingTaskOutput": "fetching task output...",
+      "checkingAutomations": "checking automations...",
+      "creatingName": "creating {{name}}...",
+      "creatingAutomation": "creating automation...",
+      "actionAutomation": "{{action}} automation...",
+      "managingAutomation": "managing automation...",
+      "processing": "processing..."
+    },
+    "preparing": {
+      "writingCode": "writing code{{size}}...",
+      "composingEdits": "composing edits{{size}}...",
+      "preparingCommand": "preparing command{{size}}...",
+      "composingCode": "composing code{{size}}...",
+      "craftingSearch": "crafting search...",
+      "preparingRequest": "preparing request...",
+      "buildingSearchPattern": "building search pattern...",
+      "generating": "generating{{size}}..."
+    },
+    "nChars": "~{{count}} chars",
+    "nKB": "~{{size}} KB"
   }
 }
