--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -339,5 +339,211 @@
     "statusUnknown": "未知",
     "namePlaceholder": "例如：每日市场摘要",
     "descPlaceholder": "可选描述"
+  },
+  "toolArtifact": {
+    "open": "开盘",
+    "prevClose": "前收",
+    "dayRange": "日内区间",
+    "52wRange": "52周区间",
+    "volume": "成交量",
+    "marketCap": "市值",
+    "periodHigh": "区间最高",
+    "periodLow": "区间最低",
+    "high": "高",
+    "low": "低",
+    "vol": "量",
+    "marketIndices": "市场指数",
+    "sectorPerformance": "板块表现",
+    "stockScreener": "股票筛选",
+    "pricePerformance": "价格表现",
+    "analystRatings": "分析师评级",
+    "revenueBreakdown": "营收构成",
+    "byProduct": "按产品",
+    "byGeography": "按地区",
+    "quarterlyRevenue": "季度营收和净利润",
+    "profitMargins": "利润率",
+    "epsActualVsEstimate": "EPS：实际 vs 预期",
+    "cashFlowQuarterly": "现金流（季度）",
+    "openInTrading": "在交易中心打开 ↗",
+    "revenue": "营收",
+    "netIncome": "净利润",
+    "grossMargin": "毛利率",
+    "operatingMargin": "营业利润率",
+    "netMargin": "净利率",
+    "epsActual": "EPS 实际",
+    "epsEstimate": "EPS 预期",
+    "operatingCF": "经营现金流",
+    "capEx": "资本支出",
+    "freeCF": "自由现金流",
+    "periodChange": "区间涨跌",
+    "avgVolume": "平均成交量",
+    "volatility": "波动率",
+    "nResults": "{{count}} 个结果",
+    "nRatings": "{{count}} 个评级",
+    "nMoreStocks": "还有 {{count}} 只",
+    "noPriceData": "暂无价格数据",
+    "noSectorData": "暂无板块数据",
+    "noIndexData": "暂无指数数据",
+    "noScreenerResults": "暂无筛选结果",
+    "symbol": "代码",
+    "company": "公司",
+    "price": "价格",
+    "mktCap": "市值",
+    "sector": "板块",
+    "industry": "行业",
+    "beta": "Beta",
+    "dividend": "股息",
+    "exchange": "交易所",
+    "country": "国家",
+    "changePct": "涨跌%",
+    "filing": "{{type}} 报告",
+    "filingDate": "提交日期",
+    "periodEnd": "报告期末",
+    "cik": "CIK",
+    "sections": "章节",
+    "sectionsExtracted": "已提取章节",
+    "earningsCall": "业绩电话会",
+    "included": "已包含",
+    "recent8Ks": "近期 8-K",
+    "recent8KFilings": "近期 8-K 报告",
+    "viewOnEdgar": "在 SEC EDGAR 查看 ↗",
+    "openOnEdgar": "在 SEC EDGAR 打开",
+    "8kFilings": "8-K 报告",
+    "nFilings": "过去 {{days}} 天内 {{count}} 份报告",
+    "nMoreFilings": "还有 {{count}} 份",
+    "nMoreAutomations": "还有 {{count}} 个",
+    "pressRelease": "新闻稿",
+    "view": "查看",
+    "secFilingDocument": "SEC 报告文件",
+    "loadingSecDocument": "加载 SEC 文件中...",
+    "no8KFilings": "过去 {{days}} 天内未找到 8-K 报告。",
+    "nLast90Days": "{{count}}（近90天）",
+    "automations": "自动化",
+    "automationCreated": "自动化已创建",
+    "automationCreatedSuccess": "自动化创建成功",
+    "schedule": "调度",
+    "nextRun": "下次运行",
+    "lastRun": "上次运行",
+    "executions": "执行记录",
+    "nTotal": "共 {{count}} 次",
+    "nAutomations": "{{count}} 个自动化",
+    "next": "下次：{{time}}",
+    "instruction": "指令",
+    "configuration": "配置",
+    "agentMode": "智能体模式",
+    "triggerType": "触发类型",
+    "recurringCron": "定期（cron）",
+    "oneTime": "一次性",
+    "recurring": "定期",
+    "executionHistory": "执行历史（共 {{count}} 次）",
+    "manualTrigger": "手动触发",
+    "noAutomationsFound": "未找到自动化。",
+    "viewInAutomations": "在自动化页面查看",
+    "status": "状态",
+    "planDetails": "计划详情",
+    "noPlanDescription": "暂无计划描述。",
+    "subagentTask": "子代理任务",
+    "instructions": "指令",
+    "result": "结果",
+    "subagentStillRunning": "子代理运行中...",
+    "noResultAvailable": "暂无结果",
+    "goToSubagentTab": "前往子代理标签",
+    "noResultContent": "无结果内容",
+    "input": "输入",
+    "output": "输出",
+    "resultTooLarge": "结果过大，无法内联显示",
+    "resultSavedToFilesystem": "完整结果已保存至工作区文件系统。",
+    "openFullResult": "打开完整结果",
+    "preview": "预览",
+    "nSearchResults": "\"{{query}}\" 的 {{count}} 个结果",
+    "untitled": "无标题",
+    "nReasoning": "{{count}} 次推理",
+    "nToolCalls": "{{count}} 次工具调用",
+    "nStepsCompleted": "已完成 {{count}} 个步骤",
+    "reasoning": "推理",
+    "reasoningLabel": "推理：{{title}}",
+    "reasoningPending": "推理中...",
+    "reasoningComplete": "推理完成",
+    "done": "完成",
+    "toolCall": "工具调用",
+    "tool": {
+      "stockPrices": "股票价格",
+      "companyOverview": "公司概况",
+      "marketIndices": "市场指数",
+      "sectorPerformance": "板块表现",
+      "stockScreener": "股票筛选",
+      "secFiling": "SEC 报告",
+      "entityNews": "实体新闻",
+      "tickerSearch": "股票搜索",
+      "financialStatements": "财务报表",
+      "financialRatios": "财务比率",
+      "growthMetrics": "增长指标",
+      "valuationHistory": "估值历史",
+      "stockData": "股票数据",
+      "assetData": "资产数据",
+      "userData": "用户数据",
+      "updateData": "更新数据",
+      "removeData": "删除数据",
+      "bash": "Bash",
+      "glob": "Glob",
+      "grep": "Grep",
+      "webSearch": "网页搜索",
+      "webFetch": "网页获取",
+      "write": "写入",
+      "read": "读取",
+      "edit": "编辑",
+      "executeCode": "执行代码",
+      "thinking": "思考",
+      "waitingForSubagent": "等待子代理",
+      "taskOutput": "任务输出",
+      "automations": "自动化",
+      "createAutomation": "创建自动化",
+      "manageAutomation": "管理自动化"
+    },
+    "inProgress": {
+      "fetchingSymbolPrices": "获取 {{symbol}} 价格...",
+      "fetchingPrices": "获取价格...",
+      "analyzingSymbol": "分析 {{symbol}}...",
+      "analyzing": "分析中...",
+      "fetchingMarketIndices": "获取市场指数...",
+      "fetchingSectorData": "获取板块数据...",
+      "screeningStocks": "筛选股票...",
+      "fetchingSymbolFiling": "获取 {{symbol}} 报告...",
+      "fetchingFiling": "获取报告...",
+      "searchingPattern": "搜索 '{{pattern}}'...",
+      "searching": "搜索中...",
+      "searchingForPattern": "搜索 '{{pattern}}'...",
+      "searchingQuery": "搜索 '{{query}}'...",
+      "fetchingDomain": "获取 {{domain}}...",
+      "fetching": "获取中...",
+      "writingFile": "写入 {{name}}...",
+      "writing": "写入中...",
+      "readingFile": "读取 {{name}}...",
+      "reading": "读取中...",
+      "editingFile": "编辑 {{name}}...",
+      "editing": "编辑中...",
+      "runningCommand": "执行命令...",
+      "executing": "执行中...",
+      "waitingForSubagent": "等待子代理...",
+      "fetchingTaskOutput": "获取任务输出...",
+      "checkingAutomations": "检查自动化...",
+      "creatingName": "创建 {{name}}...",
+      "creatingAutomation": "创建自动化...",
+      "actionAutomation": "{{action}} 自动化...",
+      "managingAutomation": "管理自动化...",
+      "processing": "处理中..."
+    },
+    "preparing": {
+      "writingCode": "编写代码{{size}}...",
+      "composingEdits": "编辑中{{size}}...",
+      "preparingCommand": "准备命令{{size}}...",
+      "composingCode": "编写代码{{size}}...",
+      "craftingSearch": "构建搜索...",
+      "preparingRequest": "准备请求...",
+      "buildingSearchPattern": "构建搜索模式...",
+      "generating": "生成中{{size}}..."
+    },
+    "nChars": "~{{count}} 字符",
+    "nKB": "~{{size}} KB"
   }
 }
